k8spec/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notejam-ns
  labels:
    app: notejam
