k8spec/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-dep
  namespace: notejam-ns
  labels:
    app: notejam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      imagePullSecrets:
        - name: demo-jenkins-pull-secret
      containers:
        - name: notejam
          image: notejam:latest
          command: ["/bin/sh", "-c"]
          args: ["cd /usr/src/app && rails server -b 0.0.0.0"]
          volumeMounts:
            - name: database
              mountPath: "/usr/src/app/config"
              readOnly: true
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
        - name: database
          secret:
            secretName: database.secret
